# community-synchronizer

./: .env.example  .gitignore  CHANGELOG.md  README.md  communities.py  conf.py  credentials.json.gpg  decrypt_credentials.sh  main.py  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: release.yml
services/: google_sheet.py  google_sheet_client.py  google_sheet_writer.py  mongodb.py  mongodb_client.py  mongodb_scraper.py  strapi_api_client.py  strapi_synchronizer.py
services/strapi/: api_client.py  errors.py
