[tool.poetry]
name = "strapi_synchronizer"
version = "0.1.1"
description = ""
authors = ["Your Name <adam@culturepulse.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
python-dotenv = "^0.21.0"
pydantic = "1.10.1"
pygsheets = "^2.0.5"
numpy = "1.23.4"
pandas = "^1.5.2"
wheel = "^0.38.4"
sentry-sdk = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
