[tool.poetry]
name = "community_synchronizer"
version = "0.2.1"
description = ""
authors = ["Adam Žúrek <adam@culturepulse.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
python-dotenv = "^0.21.0"
pydantic = "1.10.1"
pygsheets = "^2.0.5"
sentry-sdk = "^1.11.1"
strapi-api-client = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
